[b]Version 0.6.8[/b]:

(2009-07-02)
 * Added a new section in the preferences dialog: TV and radio.

(2009-06-30)
 * Apply patch play_action_disabled_while_playing.diff by Francesco Cosoleto.
   (cosoleto at users.sourceforge.net). It disables the play action while 
   playing.
 * (Fix) Now the command line option -sub passes the subtitle file to another 
   running instance.

(2009-06-29)
 * Added actions to select the previous and next tv channels, and also for
   previous and next radio. Assigned by default to the keys L and H (for TV) 
   and Shift+L and Shift+H for radio.

(2009-06-28)
 * Changing chapters works again with mplayer > svn r29407 (0-based).
   For DVDs, it only works if cache = 0.
 * Added two options for smplayer.ini (section [tv]): 
   check_channels_conf_on_startup and initial_tv_deinterlace.

(2009-06-27)
 * The tv and radio submenus can be added to the toolbars (tv_menu and 
   radio_menu).

(2009-06-25)
 * New menus Open->TV and Open->Radio. The items for those menus are taken from
   ~/.mplayer/channels.conf. The services with video and audio pid are added
   to the TV menu, those with audio pid are added to the radio menu. The
   rest are discarded. The file channels.conf is rescanned on every startup
   and will add new channels to the menus. 
   Note: the file channels.conf is not read at all on Windows (mplayer lacks 
   dvb support on Windows).
 * The list of channels can be edited.

(2009-06-23)
 * Initial support for TV (dvb:// and tv://):
    - You can open dvb channels through commandline (smplayer 
      dvb://CHANNEL_NAME). It may also work with tv:// but it's untested.
    - There's an option under Preferences->Performance to set the cache for TV.
    - The view info and properties dialog recognizes dvb:// and tv:// and
      display a TV icon for them. 

(2009-06-21)
 * Added the new menu Program under the Browse menu. It allows to change
   the program track for ts files. Known issue: when a program changes, the 